[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/board.png" type="Texture" id=1]
[ext_resource path="res://board/board.gd" type="Script" id=2]
[ext_resource path="res://assets/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/cross.png" type="Texture" id=4]

[node name="board" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Sprite" parent="."]
position = Vector2( 24, 24 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Button1" type="TextureButton" parent="Buttons"]
margin_right = 16.0
margin_bottom = 16.0
button_mask = 3
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="Buttons"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
button_mask = 3
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="Buttons"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="TextureButton" parent="Buttons"]
margin_top = 16.0
margin_right = 16.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="TextureButton" parent="Buttons"]
margin_left = 16.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="TextureButton" parent="Buttons"]
margin_left = 32.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="TextureButton" parent="Buttons"]
margin_top = 32.0
margin_right = 16.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="TextureButton" parent="Buttons"]
margin_left = 16.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="TextureButton" parent="Buttons"]
margin_left = 32.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button6" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button7" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button8" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button9" to="." method="_on_button_pressed"]
